added back to top links

--- a/mod3_solution/index.html
+++ b/mod3_solution/index.html
@@ -7,7 +7,7 @@
 	<title>Assignment solution for module 3</title>
 </head>
 <body>
-	<header>
+	<header id="top">
 		<nav id="header-nav" class="navbar navbar-default">
 			<div class="container-fluid">
 				<div class="navbar-header">
@@ -64,7 +64,7 @@ Pellentesque vel dignissim urna, at vulputate dolor. Sed lorem erat, ultrices ve
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec dignissim rhoncus ipsum vitae mollis. Integer dictum porta aliquam. Sed sit amet orci ipsum. Donec eleifend purus maximus metus tincidunt, ut rhoncus mi eleifend. In laoreet nibh a elit pharetra, ut luctus massa varius. In id mauris pharetra, ornare nisl a, faucibus nisi. Vestibulum sit amet tincidunt neque. Donec ac vulputate urna. Aenean erat augue, maximus ut tellus a, dictum semper nunc. Nullam elementum nisl elit. Phasellus ante odio, facilisis sed magna non, sagittis rhoncus elit. Vestibulum eu malesuada ipsum. Vivamus quis est enim. Curabitur pulvinar ut ante nec lacinia.
 
-Vestibulum vel fermentum ligula. Nulla iaculis ligula ipsum, in viverra massa imperdiet sed. Etiam fringilla libero at arcu egestas iaculis. Praesent libero orci, dapibus eget sapien et, finibus maximus nulla. Nunc consectetur pharetra arcu. Vivamus vehicula viverra commodo. Nullam a porttitor lorem.
+Vestibulum vel fermentum ligula. Nulla iaculis ligula ipsum, in viverra massa imperdiet sed. Etiam fringilla libero at arcu egestas iaculis. Praesent libero orci, dapibus eget sapien et, finibus maximus nulla. Nunc consectetur pharetra arcu. Vivamus vehicula viverra commodo. Nullam a porttitor lorem. <a href="#pageHeader">Back to top</a>
 				    </section>
 				</div>
 			</div>
@@ -83,7 +83,7 @@ Pellentesque vel dignissim urna, at vulputate dolor. Sed lorem erat, ultrices ve
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec dignissim rhoncus ipsum vitae mollis. Integer dictum porta aliquam. Sed sit amet orci ipsum. Donec eleifend purus maximus metus tincidunt, ut rhoncus mi eleifend. In laoreet nibh a elit pharetra, ut luctus massa varius. In id mauris pharetra, ornare nisl a, faucibus nisi. Vestibulum sit amet tincidunt neque. Donec ac vulputate urna. Aenean erat augue, maximus ut tellus a, dictum semper nunc. Nullam elementum nisl elit. Phasellus ante odio, facilisis sed magna non, sagittis rhoncus elit. Vestibulum eu malesuada ipsum. Vivamus quis est enim. Curabitur pulvinar ut ante nec lacinia.
 
-Vestibulum vel fermentum ligula. Nulla iaculis ligula ipsum, in viverra massa imperdiet sed. Etiam fringilla libero at arcu egestas iaculis. Praesent libero orci, dapibus eget sapien et, finibus maximus nulla. Nunc consectetur pharetra arcu. Vivamus vehicula viverra commodo. Nullam a porttitor lorem.
+Vestibulum vel fermentum ligula. Nulla iaculis ligula ipsum, in viverra massa imperdiet sed. Etiam fringilla libero at arcu egestas iaculis. Praesent libero orci, dapibus eget sapien et, finibus maximus nulla. Nunc consectetur pharetra arcu. Vivamus vehicula viverra commodo. Nullam a porttitor lorem. <a href="#pageHeader">Back to top</a>
 				    </section>
 				</div>
 			</div>
@@ -102,7 +102,7 @@ Pellentesque vel dignissim urna, at vulputate dolor. Sed lorem erat, ultrices ve
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec dignissim rhoncus ipsum vitae mollis. Integer dictum porta aliquam. Sed sit amet orci ipsum. Donec eleifend purus maximus metus tincidunt, ut rhoncus mi eleifend. In laoreet nibh a elit pharetra, ut luctus massa varius. In id mauris pharetra, ornare nisl a, faucibus nisi. Vestibulum sit amet tincidunt neque. Donec ac vulputate urna. Aenean erat augue, maximus ut tellus a, dictum semper nunc. Nullam elementum nisl elit. Phasellus ante odio, facilisis sed magna non, sagittis rhoncus elit. Vestibulum eu malesuada ipsum. Vivamus quis est enim. Curabitur pulvinar ut ante nec lacinia.
 
-Vestibulum vel fermentum ligula. Nulla iaculis ligula ipsum, in viverra massa imperdiet sed. Etiam fringilla libero at arcu egestas iaculis. Praesent libero orci, dapibus eget sapien et, finibus maximus nulla. Nunc consectetur pharetra arcu. Vivamus vehicula viverra commodo. Nullam a porttitor lorem.
+Vestibulum vel fermentum ligula. Nulla iaculis ligula ipsum, in viverra massa imperdiet sed. Etiam fringilla libero at arcu egestas iaculis. Praesent libero orci, dapibus eget sapien et, finibus maximus nulla. Nunc consectetur pharetra arcu. Vivamus vehicula viverra commodo. Nullam a porttitor lorem. <a href="#pageHeader">Back to top</a>
 				    </section>
 				</div>
 			</div>
